--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -15,6 +15,7 @@
         tools:targetApi="31">
         <activity
             android:name=".Trips.AddTripActivity"
+            android:label="Add New Trip"
             android:exported="false" />
         <activity
             android:name=".MainActivity"
