--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -15,7 +15,8 @@
         tools:targetApi="31">
         <activity
             android:name=".Expressions.AddExpressionActivity"
-            android:exported="false" />
+            android:exported="false"
+            android:parentActivityName=".Expressions.ExpressionActivity" />
         <activity
             android:name=".Expressions.ExpressionActivity"
             android:exported="false"
